ClaimsAndWarranty_ClaimsDev/WarrantyAndClaims_ClaimsDev/force-app/main/default/objects/EU_Price_Item__c/EU_Price_Item__c.object-meta.xml
<CustomObject>
    <label>Price Line</label>
    <nameField>
        <displayFormat>PI-{YY}-{0000000}</displayFormat>
        <label>Price Line ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Price Lines</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>