ClaimsAndWarranty_ClaimsDev/WarrantyAndClaims_ClaimsDev/force-app/main/default/objects/EU_Price_Item__c/fields/EU_Calculated_Price__c.field-meta.xml
<CustomField>
    <fullName>EU_Calculated_Price__c</fullName>
    <label>Net Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>