ClaimsAndWarranty_ClaimsDev/WarrantyAndClaims_ClaimsDev/force-app/main/default/objects/EU_Price_Item__c/fields/EU_Expiry_Date__c.field-meta.xml
<CustomField>
    <fullName>EU_Expiry_Date__c</fullName>
    <label>Expiry Date</label>
    <type>Date</type>
</CustomField>