ClaimsAndWarranty_ClaimsDev/WarrantyAndClaims_ClaimsDev/force-app/main/default/objects/EU_Price_Item__c/fields/EU_Header_Adjustment_Detail__c.field-meta.xml
<CustomField>
    <fullName>EU_Header_Adjustment_Detail__c</fullName>
    <label>Adjustment Detail</label>
    <length>35</length>
    <type>Text</type>
</CustomField>