ClaimsAndWarranty_ClaimsDev/WarrantyAndClaims_ClaimsDev/force-app/main/default/objects/EU_Price_Item__c/fields/EU_Header_Base_Price_ID__c.field-meta.xml
<CustomField>
    <fullName>EU_Header_Base_Price_ID__c</fullName>
    <label>Base Price ID</label>
    <length>35</length>
    <type>Text</type>
</CustomField>