ClaimsAndWarranty_ClaimsDev/WarrantyAndClaims_ClaimsDev/force-app/main/default/objects/EU_Price_Item__c/fields/EU_Header_Category_Code_4__c.field-meta.xml
<CustomField>
    <fullName>EU_Header_Category_Code_4__c</fullName>
    <label>Category Code 4</label>
    <length>35</length>
    <type>Text</type>
</CustomField>