ClaimsAndWarranty_ClaimsDev/WarrantyAndClaims_ClaimsDev/force-app/main/default/objects/EU_Price_Item__c/fields/EU_Header_Company_Pricing_ID__c.field-meta.xml
<CustomField>
    <fullName>EU_Header_Company_Pricing_ID__c</fullName>
    <label>Company Pricing ID</label>
    <length>5</length>
    <type>Text</type>
</CustomField>