ClaimsAndWarranty_ClaimsDev/WarrantyAndClaims_ClaimsDev/force-app/main/default/objects/EU_Price_Item__c/fields/EU_Header_Contract_Description__c.field-meta.xml
<CustomField>
    <fullName>EU_Header_Contract_Description__c</fullName>
    <label>Contract Description</label>
    <length>110</length>
    <type>Text</type>
</CustomField>