ClaimsAndWarranty_ClaimsDev/WarrantyAndClaims_ClaimsDev/force-app/main/default/objects/EU_Price_Item__c/fields/EU_Item_Description__c.field-meta.xml
<CustomField>
    <fullName>EU_Item_Description__c</fullName>
    <label>Item Description</label>
    <length>35</length>
    <type>Text</type>
</CustomField>