ClaimsAndWarranty_ClaimsDev/WarrantyAndClaims_ClaimsDev/force-app/main/default/objects/EU_Price_Item__c/fields/EU_Item_Number__c.field-meta.xml
<CustomField>
    <fullName>EU_Item_Number__c</fullName>
    <label>Item Number</label>
    <length>30</length>
    <type>Text</type>
</CustomField>