ClaimsAndWarranty_ClaimsDev/WarrantyAndClaims_ClaimsDev/force-app/main/default/objects/EU_Price_Item__c/fields/EU_Item_Price_Class__c.field-meta.xml
<CustomField>
    <fullName>EU_Item_Price_Class__c</fullName>
    <label>Item Price Class</label>
    <length>30</length>
    <type>Text</type>
</CustomField>