ClaimsAndWarranty_ClaimsDev/WarrantyAndClaims_ClaimsDev/force-app/main/default/objects/EU_Price_Item__c/fields/EU_Item_Price_Class_ID__c.field-meta.xml
<CustomField>
    <fullName>EU_Item_Price_Class_ID__c</fullName>
    <label>Item Price Class ID</label>
    <length>5</length>
    <type>Text</type>
</CustomField>