ClaimsAndWarranty_ClaimsDev/WarrantyAndClaims_ClaimsDev/force-app/main/default/objects/EU_Price_Item__c/fields/EU_Price_Record_Type_ID__c.field-meta.xml
<CustomField>
    <fullName>EU_Price_Record_Type_ID__c</fullName>
    <label>Price Record Type ID</label>
    <length>3</length>
    <type>Text</type>
</CustomField>