ClaimsAndWarranty_ClaimsDev/WarrantyAndClaims_ClaimsDev/force-app/main/default/objects/EU_Price_Item__c/fields/EU_Price_Unit_of_Measure__c.field-meta.xml
<CustomField>
    <fullName>EU_Price_Unit_of_Measure__c</fullName>
    <label>Price Unit of Measure</label>
    <length>35</length>
    <type>Text</type>
</CustomField>