ClaimsAndWarranty_ClaimsDev/WarrantyAndClaims_ClaimsDev/force-app/main/default/objects/EU_Price_Item__c/fields/EU_Price_Unit_of_Measure_ID__c.field-meta.xml
<CustomField>
    <fullName>EU_Price_Unit_of_Measure_ID__c</fullName>
    <label>UoM</label>
    <length>10</length>
    <type>Text</type>
</CustomField>