ClaimsAndWarranty_ClaimsDev/WarrantyAndClaims_ClaimsDev/force-app/main/default/objects/EU_Price_Item__c/fields/EU_Pricing_Agreement__c.field-meta.xml
<CustomField>
    <fullName>EU_Pricing_Agreement__c</fullName>
    <label>Price Header</label>
    <referenceTo>EU_Price_Agreement__c</referenceTo>
    <relationshipLabel>Price Lines</relationshipLabel>
    <relationshipName>Price_Items</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>