ClaimsAndWarranty_ClaimsDev/WarrantyAndClaims_ClaimsDev/force-app/main/default/objects/EU_Price_Item__c/fields/EU_Quantity_Break__c.field-meta.xml
<CustomField>
    <fullName>EU_Quantity_Break__c</fullName>
    <label>Qty</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>