ClaimsAndWarranty_ClaimsDev/WarrantyAndClaims_ClaimsDev/force-app/main/default/objects/EU_Price_Item__c/fields/EU_Source_System_ID__c.field-meta.xml
<CustomField>
    <fullName>EU_Source_System_ID__c</fullName>
    <label>Source System ID</label>
    <length>10</length>
    <type>Text</type>
</CustomField>