ClaimsAndWarranty_ClaimsDev/WarrantyAndClaims_ClaimsDev/force-app/main/default/objects/EU_Price_Item__c/fields/EU_System_External_Reference__c.field-meta.xml
<CustomField>
    <fullName>EU_System_External_Reference__c</fullName>
    <externalId>true</externalId>
    <label>System External Reference</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>