ClaimsAndWarranty_ClaimsDev/WarrantyAndClaims_ClaimsDev/force-app/main/default/objects/EU_Price_Item__c/fields/EU_Total_Line__c.field-meta.xml
<CustomField>
    <fullName>EU_Total_Line__c</fullName>
    <formula>EU_Calculated_Price__c *  EU_Quantity_Break__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Line</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>